artifact examle added

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,3 +31,10 @@ jobs:
           tags: |
             rakesh9711/calculator:${{ github.ref_name }}
             rakesh9711/calculator:latest
+      - run: mkdir -p /artifacts
+      - run: echo hello > /artifacts/world.txt
+      - name: upload docker image as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: my-artifacts
+          path: /artifacts
