--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,10 +31,10 @@ jobs:
           tags: |
             rakesh9711/calculator:${{ github.ref_name }}
             rakesh9711/calculator:latest
-      - run: sudo mkdir -p /artifacts
-      - run: sudo sh -c "echo hello > /artifacts/world.txt"
+          outputs: type=docker,dest=${{ runner.temp }}/myimage.tar
+
       - name: upload docker image as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: my-artifacts
-          path: /artifacts
+          name: calculator-image
+          path: ${{ runner.temp }}/myimage.tar
